# kodrst

./: .gitignore  .npmignore  Cargo.toml  build.sh  compile.rs  index.d.ts  index.js  package.json  rollup.config.mjs  tsconfig.json
native/: lib.rs
native/core/: client.rs  mod.rs  rst.rs
native/structs/: bucket.rs  file.rs  mod.rs  request.rs  response.rs
src/: index.macro.ts  index.ts  lib.rs  macros.rs  response.ts  rst.ts  symbols.ts
src/core/: client.rs  mod.rs  response.ts  rst.rs  rst.ts  scheduler.rs
src/structs/: bucket.rs  file.rs  mod.rs  request.rs  response.rs
test/: bench.ts  headers.ts  multipart.ts
