[package]
name    = "kodrst"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib"]
name       = "kodrst"
path       = "native/lib.rs"

[[bin]]
name = "compile"
path = "compile.rs"

[profile.release]
codegen-units = 1
opt-level     = "z"
strip         = "symbols"
panic         = "abort"
debug         = true
lto           = true

[dependencies]
tokio-rustls = { version = "0.26.2", default-features = false, features = ["logging", "tls12", "ring"] }
tokio        = { version = "1.45.1", features = ["full"] }
rustls-native-certs = "0.8.1"
aahc = "0.1.0"
async-compat = "0.2.4"
once_cell = "1.21.3"
